--- a/home1.html
+++ b/home1.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <script type="text/javascript" src="home1.js"></script>
-    <link rel="stylesheet" type = "text/css" href="home1.css">
+    <link rel="stylesheet" type="text/css" href="home1.css">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-  
-  </head>
-  <body>
+
+</head>
+
+<body>
     <nav class="navbar">
         <ul class="navbar-nav">
-            <li >
+            <li>
                 <img class="logo" src="img/Logo_Deco3200.png"></img>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <svg class="svg-icon" viewBox="0 0 20 20">
-                        <path d="M18.121,9.88l-7.832-7.836c-0.155-0.158-0.428-0.155-0.584,0L1.842,9.913c-0.262,0.263-0.073,0.705,0.292,0.705h2.069v7.042c0,0.227,0.187,0.414,0.414,0.414h3.725c0.228,0,0.414-0.188,0.414-0.414v-3.313h2.483v3.313c0,0.227,0.187,0.414,0.413,0.414h3.726c0.229,0,0.414-0.188,0.414-0.414v-7.042h2.068h0.004C18.331,10.617,18.389,10.146,18.121,9.88 M14.963,17.245h-2.896v-3.313c0-0.229-0.186-0.415-0.414-0.415H8.342c-0.228,0-0.414,0.187-0.414,0.415v3.313H5.032v-6.628h9.931V17.245z M3.133,9.79l6.864-6.868l6.867,6.868H3.133z"></path>
+                        <path
+                            d="M18.121,9.88l-7.832-7.836c-0.155-0.158-0.428-0.155-0.584,0L1.842,9.913c-0.262,0.263-0.073,0.705,0.292,0.705h2.069v7.042c0,0.227,0.187,0.414,0.414,0.414h3.725c0.228,0,0.414-0.188,0.414-0.414v-3.313h2.483v3.313c0,0.227,0.187,0.414,0.413,0.414h3.726c0.229,0,0.414-0.188,0.414-0.414v-7.042h2.068h0.004C18.331,10.617,18.389,10.146,18.121,9.88 M14.963,17.245h-2.896v-3.313c0-0.229-0.186-0.415-0.414-0.415H8.342c-0.228,0-0.414,0.187-0.414,0.415v3.313H5.032v-6.628h9.931V17.245z M3.133,9.79l6.864-6.868l6.867,6.868H3.133z">
+                        </path>
                     </svg>
                     <span class="link-text">Home</span>
                 </a>
@@ -26,7 +30,9 @@
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <svg class="svg-icon" viewBox="0 0 20 20">
-                        <path d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z"></path>
+                        <path
+                            d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z">
+                        </path>
                     </svg>
                     <span class="link-text">Profile</span>
                 </a>
@@ -34,7 +40,9 @@
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <svg class="svg-icon" viewBox="0 0 20 20">
-                        <path d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z"></path>
+                        <path
+                            d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
+                        </path>
                     </svg>
                     <span class="link-text">Checker</span>
                 </a>
@@ -45,35 +53,37 @@
 
     <main>
         <div class="app">
-        <h3 class="welcome-text" id="hello">Hi Benji,</h3>
-        <h1 class="welcome-text">Welcome back!</h1>
-        <div class="planet-box">
-            <div class="viz-box">
-            <h3>Your Planet:</h3>
-            <img class="viz" src="img/planet.svg"></img>
+            <h3 class="welcome-text" id="hello">Hi Benji,</h3>
+            <h1 class="welcome-text">Welcome back!</h1>
+            <div class="planet-box">
+                <div class="viz-box">
+                    <h3>Your Planet:</h3>
+                    <img class="viz" src="img/planet.svg"></img>
+                </div>
+                <div class="stat-box">
+                    <h2>Statistics</h2>
+                    <p class="desc">What's new with your planet.</p>
+                    <h4>Today:</h4>
+                    <p class="stat">+ 78pts</p>
+                    <h4>This Week:</h4>
+                    <p class="stat">+ 187pts</p>
+                    <h4>All Time:</h4>
+                    <p class="stat">+ 743pts</p>
+                </div>
             </div>
-            <div class="stat-box">
-                <h2>Statistics</h2>
-                <p class="desc">What's new with your planet.</p>
-                <h4>Today:</h4>
-                <p class="stat">+ 78pts</p>
-                <h4>This Week:</h4>
-                <p class="stat">+ 187pts</p>
-                <h4>All Time:</h4>
-                <p class="stat">+ 743pts</p>
-            </div>
-        </div>
-        <div class="spacer"></div>
+            <div class="spacer"></div>
 
-        <div class="graph-box">
-            <h3>Your Progress:</h3>
-            <img class="graph" src="img/graph.png">
+            <div class="graph-box">
+                <h3>Your Progress:</h3>
+                <img class="graph" src="img/graph.png">
+            </div>
         </div>
-    </div>
-    <div class="transaction-list">
-        <p>abracisid uhfaovbi eufhboaciw uechnfoie uwhxnfua wyeuyc hfuawey chbf iuae ygcf</p>
-    </div>
+        <div class="transaction-container">
+            <div class="transaction-list">
+                <h3>Your Transactions:</h3>
+            </div>
+        </div>
     </main>
-  </body>
+</body>
 
 </html>
