--- a/home1.html
+++ b/home1.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <ul class="navbar-nav">
             <li>
-                <img class="logo" src="img/Logo_Deco3200.png"></img>
+                <img class="logo" src="img/logo.png"></img>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
@@ -79,8 +79,9 @@
             </div>
         </div>
         <div class="transaction-container">
-            <div class="transaction-list">
+            <div>
                 <h3>Your Transactions:</h3>
+                
             </div>
         </div>
     </main>
