Added transaction items

--- a/home1.html
+++ b/home1.html
@@ -81,7 +81,38 @@
         <div class="transaction-container">
             <div>
                 <h3>Your Transactions:</h3>
-                
+                <ul class="transaction-list">
+                    <li class="transaction-item">
+                        <a href="#" class="transaction">
+                            <img src="img/lamp.png" alt="" class="transaction-icon">
+                            <span class="transaction-text">transaction<br>text</span>
+                        </a>
+                    </li>
+                    <li class="transaction-item">
+                        <a href="#" class="transaction">
+                            <img src="img/juice.png" alt="" class="transaction-icon">
+                            <span class="transaction-text">transaction<br>text</span>
+                        </a>
+                    </li>
+                    <li class="transaction-item">
+                        <a href="#" class="transaction">
+                            <img src="img/bags.png" alt="" class="transaction-icon">
+                            <span class="transaction-text">transaction<br>text</span>
+                        </a>
+                    </li>
+                    <li class="transaction-item">
+                        <a href="#" class="transaction">
+                            <img src="img/plant.png" alt="" class="transaction-icon">
+                            <span class="transaction-text">transaction<br>text</span>
+                        </a>
+                    </li>
+                    <li class="transaction-item">
+                        <a href="#" class="transaction">
+                            <img src="img/bags.png" alt="" class="transaction-icon">
+                            <span class="transaction-text">transaction<br>text</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </main>
