Added day dividers

--- a/home1.html
+++ b/home1.html
@@ -81,35 +81,36 @@
         <div class="transaction-container">
             <div>
                 <h3>Your Transactions:</h3>
+                <h4 class="transaction-divider"><span class="underline">T</span>oday</h4>
                 <ul class="transaction-list">
                     <li class="transaction-item">
                         <a href="#" class="transaction">
                             <img src="img/lamp.png" alt="" class="transaction-icon">
-                            <span class="transaction-text">transaction<br>text</span>
+                            <span class="transaction-text">Ikea - Tempe<br><span class="transaction-text-numbers">- $12.50</span></span>
                         </a>
                     </li>
                     <li class="transaction-item">
                         <a href="#" class="transaction">
                             <img src="img/juice.png" alt="" class="transaction-icon">
-                            <span class="transaction-text">transaction<br>text</span>
+                            <span class="transaction-text">Boost Juice<br><span class="transaction-text-numbers">- $12.50</span></span>
                         </a>
                     </li>
                     <li class="transaction-item">
                         <a href="#" class="transaction">
                             <img src="img/bags.png" alt="" class="transaction-icon">
-                            <span class="transaction-text">transaction<br>text</span>
+                            <span class="transaction-text">Patagonia<br><span class="transaction-text-numbers">- $63.50</span></span>
                         </a>
                     </li>
                     <li class="transaction-item">
                         <a href="#" class="transaction">
                             <img src="img/plant.png" alt="" class="transaction-icon">
-                            <span class="transaction-text">transaction<br>text</span>
+                            <span class="transaction-text">Green Plants<br><span class="transaction-text-numbers">- $43.50</span></span>
                         </a>
                     </li>
                     <li class="transaction-item">
                         <a href="#" class="transaction">
                             <img src="img/bags.png" alt="" class="transaction-icon">
-                            <span class="transaction-text">transaction<br>text</span>
+                            <span class="transaction-text">Cotton On<br><span class="transaction-text-numbers">- $19.50</span></span>
                         </a>
                     </li>
                 </ul>
