--- a/home1.html
+++ b/home1.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" src="home1.js"></script>
     <link rel="stylesheet" type="text/css" href="home1.css">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"> <!-- This hurt to figure out -->
 
 </head>
 
