Mobile heading alignemnt updated

--- a/home1.html
+++ b/home1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar">
         <ul class="navbar-nav">
             <li>
@@ -77,8 +77,8 @@
     </nav>
     <main>
         <div class="app">
-            <h3 class="welcome-text" id="hello">Hi Benji,</h3>
-            <h1 class="welcome-text">Welcome back!</h1>
+            <h3 class="welcome-text hello" >Hi Benji,</h3>
+            <h1 class="welcome-text hello">Welcome back!</h1>
             <div class="planet-box">
                 <div class="viz-box">
                     <h3>Your Planet:</h3>
