Cleaned up LogIn screen

--- a/home1.html
+++ b/home1.html
@@ -85,7 +85,7 @@
                     <img class="viz" src="img/planet.svg"></img>
                 </div>
                 <div class="stat-box">
-                    <h2>Statistics</h2>
+                    <h2>Statistics:</h2>
                     <p class="desc">What's new with your planet.</p>
                     <h4>Today:</h4>
                     <p class="stat">+ 78pts</p>
