--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Help me -->	
-	
+<!-- Help me -->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <link rel = "stylesheet" type = "text/css" href = "styles.css"/>
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<title>Document</title>
 </head>
+
 <body>
-		<div class="login-screen">
-			<div class="app-title">
-				<h1>Welcome back!</h1>
-			</div>
-
-			<div class="login-form">
-				<div class="control-group">
-					<input type="text" class="login-field" value="" placeholder="username" id="login-name">
-					<label class="login-field-icon fui-user" for="login-name"></label>
-				</div>
-
-				<div class="control-group">
-					<input type="password" class="login-field" value="" placeholder="password" id="login-pass">
-					<label class="login-field-icon fui-lock" for="login-pass"></label>
-				</div>
-
-				<a class="btn btn-primary btn-large btn-block" href="home1.html">Login</a>
-			</div>
+	<div class="login-screen">
+		<div class="card-title">
+			<h1>Welcome back!</h1>
 		</div>
+
+		<div class="login-form">
+			<div class="input-field">
+				<input type="text" class="login-field" value="" placeholder="username" id="login-name">
+				<label class="login-field-icon fui-user" for="login-name"></label>
+			</div>
+
+			<div class="input-field">
+				<input type="password" class="login-field" value="" placeholder="password" id="login-pass">
+				<label class="login-field-icon fui-lock" for="login-pass"></label>
+			</div>
+
+			<a class="btn btn-primary btn-large btn-block" href="home1.html">Login</a>
+		</div>
+	</div>
 </body>
+
 </html>
