Added floaty earth

--- a/home 2.html
+++ b/home 2.html
@@ -82,8 +82,10 @@
                 <div class="product-box">
                     <button class="back-button">
                         <svg class="svg-icon" viewBox="0 0 20 20">
-							<path d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 "></path>
-						</svg>
+                            <path
+                                d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 ">
+                            </path>
+                        </svg>
                     </button>
                     <div class="product-detail-block">
                         <h3>Tree Graphic Tee</h3>
@@ -103,38 +105,39 @@
                         </div>
                     </div>
                     <h5>Supplier Ethics</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-bad" style="width: 4vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                    </div>
                     <h5>Material Waste</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-med" style="width: 9vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-med" style="width: 9vw;"></div>
+                    </div>
                     <h5>Manufacturing Methods</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-bad" style="width: 4vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                    </div>
                     <h5>Energy/water consumption</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-bad" style="width: 3vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                    </div>
                     <h5>Animal Welfare</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-good" style="width: 14vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-good" style="width: 14vw;"></div>
+                    </div>
                     <h5>Deforestation</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-bad" style="width: 4vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                    </div>
                     <h5>Pollution</h5>
-                    <div class="metric-bar-outside"><div class="metric-bar-inside-bad" style="width: 3vw;"></div></div>
+                    <div class="metric-bar-outside">
+                        <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                    </div>
                 </div>
             </div>
 
-            
+
         </div>
     </main>
 </body>
 
-</html>
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
 </html>
