--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<label class="login-field-icon fui-lock" for="login-pass"></label>
 			</div>
 
-			<a class="btn btn-primary btn-large btn-block" href="home1.html">Login</a>
+			<a class="btn btn-primary btn-large btn-block" href="home.html">Login</a>
 		</div>
 	</div>
 </body>
