Mobile version created for profile

--- a/profile.html
+++ b/profile.html
@@ -85,14 +85,14 @@
                     </div>
                     <div class="profile-text-space">
                         <h1>Ruth Huffer</h1>
-                        <h4><span class="underline">M</span>y Goals</h4>
+                        <h4><span class="underline">Y</span>our Impact:</h4>
                         <div class="profile-goals">
-                            <div class="goal-card" style="margin-right: 1rem;">
+                            <div class="goal-card impact" style="margin-right: 1rem;">
                                 <img class="goal-icon" src="img/toucan.png">
                                 <p style="font-size: smaller;">Earn 50 more points to unlock a new and exclusive animal!
                                 </p>
                             </div>
-                            <div class="goal-card">
+                            <div class="goal-card impact">
                                 <img class="goal-icon" src="img/bag.png">
                                 <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
                                     badge.</p>
@@ -102,14 +102,17 @@
                 </div>
                 <div class="bank-card-box">
                     <h3>Your Cards:</h3>
-                    <div class="profile-goals">
-                        <div class="goal-card" style="margin-right: 1rem;">
-                            <img class="goal-icon" src="img/Mastercard-Logo.png">
+                    <div class="profile-cards">
+                        <div class="add-bank-card" style="margin-right: 1rem; width: 14vw;">
+                            <h1>+</h1>
+                        </div>
+                        <div class="bank-card" style="margin-right: 1rem;">
+                            <img class="card-icon" src="img/Mastercard-Logo.png">
                             <p style="font-size: smaller;"><br><br>XXXX-XXXX-XXXX-2489
                             </p>
                         </div>
-                        <div class="goal-card" style="margin-right: 1rem;">
-                            <img class="goal-icon" src="img/Mastercard-Logo.png">
+                        <div class="bank-card" style="margin-right: 1rem;">
+                            <img class="card-icon" src="img/Mastercard-Logo.png">
                             <p style="font-size: smaller;"><br><br>XXXX-XXXX-XXXX-5678
                             </p>
                         </div>
@@ -117,8 +120,11 @@
                 </div>
             </div>
             <div class="goal-box">
-                <h3>Your Badges:</h3>
+                <h3>Your goals:</h3>
                 <div class="badge-gallery">
+                    <div class="add-bank-card" style="width: 14vw;">
+                        <h1>+</h1>
+                    </div>
                     <div class="goal-card">
                         <img class="goal-icon" src="img/bag.png">
                         <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
