--- a/profile.html
+++ b/profile.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="goal-card impact">
                                 <img class="goal-icon" src="img/bag.png">
-                                <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
+                                <p style="font-size: smaller;">Lessen your support of fast-fashion to earn the fashion
                                     badge.</p>
                             </div>
                         </div>
