fixed some shit

--- a/checker.html
+++ b/checker.html
@@ -78,7 +78,7 @@
     <main>
         <div class="app">
 
-            <h1 class="welcome-text page-heading" style="margin-left: 5vw;">Checker</h1>
+            <h1 class="welcome-text page-heading" id="checker-title">Checker</h1>
             <div class="checker">
                 <div class="checker-box">
                     <div class="product-box">
