--- a/home.html
+++ b/home.html
@@ -102,7 +102,9 @@
 
             <div class="graph-box">
                 <h3>Your Progress:</h3>
-                <img class="graph" src="img/graph.png">
+                <img class="graph-header" src="img/graph-header.png">
+                <div class="scrollable-container"><img class="graph-scroll" src="img/graph-long.png"></div>
+                
             </div>
             <div class="transaction-container">
                 <div>
